[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/battle/VersusAI.gd" type="Script" id=1]
[ext_resource path="res://scenes/battle/BattleScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/battle/AIPlayer.tscn" type="PackedScene" id=3]

[node name="VersusAI" type="Node2D"]
script = ExtResource( 1 )

[node name="AIPlayer" parent="." instance=ExtResource( 3 )]

[node name="BattleScene" parent="." instance=ExtResource( 2 )]
[connection signal="action_attack" from="BattleScene" to="." method="_on_player_action_attack"]
[connection signal="action_end_turn" from="BattleScene" to="." method="_on_player_action_end_turn"]
[connection signal="action_move" from="BattleScene" to="." method="_on_player_action_move"]
[connection signal="action_spawn" from="BattleScene" to="." method="_on_player_action_spawn"]
